[gd_scene load_steps=9 format=2]

[ext_resource path="res://assets/onlyObjects_default.png" type="Texture" id=1]
[ext_resource path="res://src/bullet/bullet.gd" type="Script" id=2]
[ext_resource path="res://assets/sounds/Sci Fi Machine Gun 3.wav" type="AudioStream" id=3]
[ext_resource path="res://assets/sounds/Rocks 8.wav" type="AudioStream" id=4]
[ext_resource path="res://assets/sounds/Glass close 2.wav" type="AudioStream" id=5]
[ext_resource path="res://assets/sounds/Concrete 2.wav" type="AudioStream" id=6]

[sub_resource type="CanvasItemMaterial" id=2]
blend_mode = 1

[sub_resource type="RectangleShape2D" id=3]
extents = Vector2( 5.14864, 1.93633 )

[node name="Bullet" type="Node2D"]
script = ExtResource( 2 )

[node name="Sprite" type="Sprite" parent="."]
material = SubResource( 2 )
rotation = 1.57128
texture = ExtResource( 1 )
region_enabled = true
region_rect = Rect2( 198, 46, 4, 10 )

[node name="AudioStreamPlayer2D" type="AudioStreamPlayer2D" parent="."]
stream = ExtResource( 3 )
volume_db = 1.0
autoplay = true

[node name="Area2D" type="Area2D" parent="." groups=["bullet"]]
collision_layer = 0
collision_mask = 2

[node name="CollisionShape2D" type="CollisionShape2D" parent="Area2D"]
shape = SubResource( 3 )

[node name="Timer" type="Timer" parent="."]
wait_time = 5.0
autostart = true

[node name="wall_hit" type="AudioStreamPlayer2D" parent="."]
stream = ExtResource( 6 )
volume_db = -20.0

[node name="glass_hit" type="AudioStreamPlayer2D" parent="."]
stream = ExtResource( 5 )
volume_db = -10.0

[node name="rock_hit" type="AudioStreamPlayer2D" parent="."]
stream = ExtResource( 4 )
volume_db = -20.0

[connection signal="body_entered" from="Area2D" to="." method="_on_Area2D_body_entered"]
[connection signal="timeout" from="Timer" to="." method="_on_Timer_timeout"]
